--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "debug": "^2.6.9",
     "deep-is": "^0.1.4",
@@ -173,6 +174,7 @@
     "minimist": "^1.2.8",
     "mongodb": "^6.3.0",
     "mongodb-connection-string-url": "^3.0.0",
+    "mongoose": "^8.1.2",
     "ms": "^2.0.0",
     "natural-compare": "^1.4.0",
     "negotiator": "^0.6.3",
@@ -242,7 +244,7 @@
     "strip-json-comments": "^3.1.1",
     "supports-color": "^5.5.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "swagger": "^0.7.5",
+    "swagger": "^0.0.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-dist": "^5.11.0",
     "swagger-ui-express": "^5.0.0",
@@ -276,9 +278,17 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=45000 --forceExit",
     "start": "node server.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^4.2.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
+  }
 }
