updated dotenv dependencies

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "doctrine": "^3.0.0",
-    "dotenv": "^16.4.3",
+    "dotenv": "^16.4.4",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.9",
     "encodeurl": "^1.0.2",
@@ -276,9 +276,12 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
